# gurney-generator

./: Dockerfile  README.md  app.py  fly.toml  pyproject.toml
static/: style.css
templates/: index.html
