[tool.poetry]
name = "gurney-generator"
version = "0.1.0"
description = "Gurney clip meme generator"
authors = ["you"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
gTTS = "^2.5.1"
pydub = "^0.25.1"
flask-cors = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
